html e css feitos

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <h1>Nossa rede social</h1>
             <span>
                 Instagram:
-                @acao-limpa
+                @acao_limpa
             </span>
             <div class="celular">
                 <div class="tela">
